Fixed stretching carousel on large monitors. Reconfigured some links and spelling

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -6,6 +6,11 @@
       margin-bottom: 60px;
     }
 
+    .carousel-inner {
+      max-width: 1280px;
+      margin: 0 auto
+    }
+
     .carousel .container {
       position: relative;
       z-index: 9;
